cmake_minimum_required(VERSION 3.16)

project(chip8-emulator LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(src/chip8)

find_package(SDL2 REQUIRED)

add_executable(chip8 
    src/main.cpp
)
target_include_directories(chip8 PRIVATE ${SDL2_INCLUDE_DIRS})
 
target_link_libraries(chip8 PRIVATE chip8-core ${SDL2_LIBRARIES})



